Fix navbar z-index

--- a/src/App.css
+++ b/src/App.css
@@ -144,7 +144,7 @@
   width: 100%;
   background-color: #172b4d;
   top: 0;
-  z-index: 1;
+  z-index: 80;
   transition: ease-in-out opacity 400ms;
 }
 
